--- a/docs-ui/src/components/CodeBlock/styles.module.css
+++ b/docs-ui/src/components/CodeBlock/styles.module.css
@@ -16,8 +16,18 @@
 .title {
   border-bottom: 1px solid var(--border);
   padding: 12px 20px;
-  font-size: 0.875rem;
+  font-size: 0.8125rem;
+  color: var(--primary);
+  font-family: var(--font-regular);
+  font-weight: var(--font-weight-bold);
+}
+
+.title code {
+  background-color: var(--surface-1);
+  padding: 0.2rem 0.375rem;
+  border-radius: 0.25rem;
   color: var(--secondary);
+  font-size: 0.8125rem;
 }
 
 .code {
