--- a/packages/ui/src/components/Link/Link.module.css
+++ b/packages/ui/src/components/Link/Link.module.css
@@ -33,4 +33,78 @@
       text-decoration-color: color-mix(in srgb, currentColor 30%, transparent);
     }
   }
+
+  .bui-Link[data-variant='title-large'] {
+    font-size: var(--bui-font-size-8);
+    line-height: 140%;
+  }
+
+  .bui-Link[data-variant='title-medium'] {
+    font-size: var(--bui-font-size-7);
+    line-height: 140%;
+  }
+
+  .bui-Link[data-variant='title-small'] {
+    font-size: var(--bui-font-size-6);
+    line-height: 140%;
+  }
+
+  .bui-Link[data-variant='title-x-small'] {
+    font-size: var(--bui-font-size-5);
+    line-height: 140%;
+  }
+
+  .bui-Link[data-variant='body-large'] {
+    font-size: var(--bui-font-size-4);
+    line-height: 140%;
+  }
+
+  .bui-Link[data-variant='body-medium'] {
+    font-size: var(--bui-font-size-3);
+    line-height: 140%;
+  }
+
+  .bui-Link[data-variant='body-small'] {
+    font-size: var(--bui-font-size-2);
+    line-height: 140%;
+  }
+
+  .bui-Link[data-variant='body-x-small'] {
+    font-size: var(--bui-font-size-1);
+    line-height: 140%;
+  }
+
+  .bui-Link[data-weight='regular'] {
+    font-weight: var(--bui-font-weight-regular);
+  }
+
+  .bui-Link[data-weight='bold'] {
+    font-weight: var(--bui-font-weight-bold);
+  }
+
+  .bui-Link[data-color='primary'] {
+    color: var(--bui-fg-primary);
+  }
+
+  .bui-Link[data-color='secondary'] {
+    color: var(--bui-fg-secondary);
+  }
+
+  .bui-Link[data-color='danger'] {
+    color: var(--bui-fg-danger);
+  }
+
+  .bui-Link[data-color='warning'] {
+    color: var(--bui-fg-warning);
+  }
+
+  .bui-Link[data-color='success'] {
+    color: var(--bui-fg-success);
+  }
+
+  .bui-Link[data-truncate] {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
