--- a/docs-ui/src/components/CustomTheme/styles.module.css
+++ b/docs-ui/src/components/CustomTheme/styles.module.css
@@ -5,7 +5,7 @@
   right: 16px;
   width: 240px;
   height: 47px;
-  background-color: var(--panel);
+  background-color: var(--bg);
   border-radius: 0.375rem;
   border: 1px solid var(--border);
   display: flex;
@@ -33,7 +33,7 @@
   height: 46px;
   flex-shrink: 0;
   border-bottom: 1px solid var(--border);
-  background-color: var(--panel);
+  background-color: var(--bg);
   display: flex;
   justify-content: space-between;
   align-items: center;
