--- a/docs-ui/src/css/globals.css
+++ b/docs-ui/src/css/globals.css
@@ -1,10 +1,9 @@
 :root {
-  --bg: #f4f4f4;
-  --panel: #fff;
-  --panel-hover: #fafafa;
+  --bg: #ffffff;
+  --bg-hover: #fafafa;
   --primary: #000;
   --secondary: #929292;
-  --action: #fff;
+  --action: #f3f3f3;
   --link: #4f5ce0;
   --font-regular: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
@@ -19,9 +18,8 @@
 }
 
 [data-theme-mode='dark'] {
-  --bg: #000;
-  --panel: #181818;
-  --panel-hover: #202020;
+  --bg: #000000;
+  --bg-hover: #202020;
   --primary: #fff;
   --secondary: #818181;
   --action: #202020;
