--- a/docs-ui/src/components/Snippet/styles.module.css
+++ b/docs-ui/src/components/Snippet/styles.module.css
@@ -5,9 +5,9 @@
 }
 
 .preview {
-  border-radius: 4px;
+  border-radius: 8px;
   box-shadow: inset 0 0 0 1px var(--border);
-  background-color: var(--bg);
+  background-color: var(--bui-bg);
   padding: 1px;
   position: relative;
 }
