--- a/packages/ui/src/components/Dialog/Dialog.module.css
+++ b/packages/ui/src/components/Dialog/Dialog.module.css
@@ -23,7 +23,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(232, 232, 232, 0.8);
+    background: color-mix(in srgb, var(--bui-gray-2) 80%, transparent);
     display: flex;
     align-items: center;
     justify-content: center;
