--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -51,7 +51,7 @@
     --bui-gray-6: #8c8c8c;
     --bui-gray-7: #757575;
     --bui-gray-8: #595959;
-    --bui-bg: var(--bui-gray-1);
+    --bui-bg-surface-0: var(--bui-gray-1);
     --bui-bg-surface-1: var(--bui-white);
     --bui-bg-surface-2: var(--bui-gray-2);
     --bui-bg-solid: #1f5493;
@@ -99,7 +99,7 @@
     --bui-gray-6: #7b7b7b;
     --bui-gray-7: #9e9e9e;
     --bui-gray-8: #b4b4b4;
-    --bui-bg: #333;
+    --bui-bg-surface-0: #333;
     --bui-bg-surface-1: #424242;
     --bui-bg-surface-2: var(--bui-gray-2);
     --bui-bg-solid: #9cc9ff;
