--- a/packages/ui/src/css/tokens.css
+++ b/packages/ui/src/css/tokens.css
@@ -81,7 +81,7 @@
     --bui-gray-8: #595959;
 
     /* Background Colors */
-    --bui-bg: var(--bui-gray-1);
+    --bui-bg-surface-0: var(--bui-gray-1);
     --bui-bg-surface-1: var(--bui-white);
     --bui-bg-surface-2: var(--bui-gray-2);
     --bui-bg-solid: #1f5493;
@@ -140,7 +140,7 @@
     --bui-gray-8: #b4b4b4;
 
     /* Background Colors */
-    --bui-bg: #333333;
+    --bui-bg-surface-0: #333333;
     --bui-bg-surface-1: #424242;
     --bui-bg-surface-2: var(--bui-gray-2);
     --bui-bg-solid: #9cc9ff;
