--- a/packages/ui/src/components/PasswordField/PasswordField.module.css
+++ b/packages/ui/src/components/PasswordField/PasswordField.module.css
@@ -23,52 +23,136 @@
     font-family: var(--bui-font-regular);
     width: 100%;
     flex-shrink: 0;
-    /* Reserve space for browser/password manager icon (e.g. 1Password) */
-    --bui-passwordmanager-icon-width: var(--bui-space-1);
+
+    &[data-size='small'] {
+      --password-field-item-height: 2rem;
+    }
+
+    &[data-size='medium'] {
+      --password-field-item-height: 2.5rem;
+    }
   }
 
-  .bui-InputVisibility {
-    position: absolute;
-    right: var(--bui-passwordmanager-icon-width);
-    top: 0;
-    bottom: 0;
+  .bui-PasswordFieldInputWrapper {
+    display: flex;
+    align-items: center;
+    border-radius: var(--bui-radius-2);
+    border: 1px solid var(--bui-border);
+    background-color: var(--bui-bg-surface-1);
+    transition: border-color 0.2s ease-in-out, outline-color 0.2s ease-in-out;
+
+    &[data-size='small'] {
+      height: 2rem;
+    }
+
+    &[data-size='medium'] {
+      height: 2.5rem;
+    }
+
+    &:focus-within {
+      border-color: var(--bui-border-pressed);
+      outline-width: 0px;
+    }
+
+    &:hover {
+      border-color: var(--bui-border-hover);
+    }
+
+    &:has([data-invalid]) {
+      border-color: var(--bui-fg-danger);
+    }
+
+    &:has([data-disabled]) {
+      opacity: 0.5;
+      cursor: not-allowed;
+      border: 1px solid var(--bui-border-disabled);
+    }
+  }
+
+  .bui-PasswordFieldIcon {
+    flex: 0 0 auto;
+    display: grid;
+    place-content: center;
+    color: var(--bui-fg-primary);
+    pointer-events: none;
+    width: var(--password-field-item-height);
+    height: var(--password-field-item-height);
+
+    & svg {
+      .bui-PasswordField[data-size='small'] & {
+        width: 1rem;
+        height: 1rem;
+      }
+
+      .bui-PasswordField[data-size='medium'] & {
+        width: 1.25rem;
+        height: 1.25rem;
+      }
+    }
+  }
+
+  .bui-PasswordFieldInput {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    font-size: var(--bui-font-size-3);
+    font-family: var(--bui-font-regular);
+    font-weight: var(--bui-font-weight-regular);
+    color: var(--bui-fg-primary);
+    width: 100%;
+    height: 100%;
+    outline: none;
+
+    &::-webkit-search-cancel-button,
+    &::-webkit-search-decoration {
+      -webkit-appearance: none;
+    }
+
+    &::placeholder {
+      color: var(--bui-fg-secondary);
+    }
+
+    &[data-disabled] {
+      cursor: not-allowed;
+    }
+
+    &:first-child {
+      .bui-PasswordField[data-size='small'] & {
+        padding-inline: var(--bui-space-3) 0;
+      }
+
+      .bui-PasswordField[data-size='medium'] & {
+        padding-inline: var(--bui-space-4) 0;
+      }
+    }
+  }
+
+  .bui-PasswordFieldVisibility {
+    flex: 0 0 auto;
+    display: grid;
+    place-content: center;
     background-color: transparent;
     cursor: pointer;
     border: none;
     padding: 0;
     margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     color: var(--bui-fg-primary);
+    width: var(--password-field-item-height);
+    height: var(--password-field-item-height);
 
-    /* Size: small */
-    &[data-size='small'] {
-      width: 2rem;
-      height: 2rem;
-    }
-    &[data-size='small'] svg {
-      width: 1rem;
-      height: 1rem;
-    }
+    & svg {
+      .bui-PasswordField[data-size='small'] & {
+        width: 1rem;
+        height: 1rem;
+      }
 
-    /* Size: medium */
-    &[data-size='medium'] {
-      width: 2.5rem;
-      height: 2.5rem;
+      .bui-PasswordField[data-size='medium'] & {
+        width: 1.25rem;
+        height: 1.25rem;
+      }
     }
-    &[data-size='medium'] svg {
-      width: 1.25rem;
-      height: 1.25rem;
-    }
-  }
-
-  /* Ensure input has enough right padding for our toggle + PM icon */
-  .bui-PasswordField .bui-InputWrapper[data-size='small'] .bui-Input {
-    padding-right: calc(2rem + var(--bui-passwordmanager-icon-width));
-  }
-
-  .bui-PasswordField .bui-InputWrapper[data-size='medium'] .bui-Input {
-    padding-right: calc(2.5rem + var(--bui-passwordmanager-icon-width));
   }
 }
