--- a/packages/ui/src/components/SearchField/SearchField.module.css
+++ b/packages/ui/src/components/SearchField/SearchField.module.css
@@ -25,6 +25,14 @@
     flex: 1;
     flex-shrink: 0;
 
+    &[data-size='small'] {
+      --search-field-item-height: 2rem;
+    }
+
+    &[data-size='medium'] {
+      --search-field-item-height: 2.5rem;
+    }
+
     &[data-empty] {
       .bui-SearchFieldClear {
         display: none;
@@ -65,7 +73,7 @@
           }
         }
 
-        .bui-SearchFieldWrapper {
+        .bui-SearchFieldInputWrapper {
           .bui-SearchFieldInput[data-icon] {
             padding-right: 0px;
           }
@@ -74,100 +82,29 @@
     }
   }
 
-  .bui-SearchFieldWrapper {
-    position: relative;
-
-    .bui-SearchFieldInput[data-icon] {
-      padding-right: var(--bui-space-6);
-    }
-
-    &[data-size='small'] .bui-SearchFieldInput {
-      height: 2rem;
-    }
-
-    &[data-size='medium'] .bui-SearchFieldInput {
-      height: 2.5rem;
-    }
-
-    &[data-size='small'] .bui-SearchFieldInput[data-icon] {
-      padding-left: var(--bui-space-8);
-    }
-
-    &[data-size='medium'] .bui-SearchFieldInput[data-icon] {
-      padding-left: var(--bui-space-9);
-    }
-  }
-
-  .bui-SearchFieldInputIcon {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-right: var(--bui-space-1);
-    color: var(--bui-fg-primary);
-    pointer-events: none;
-    /* To animate the icon when the input is collapsed */
-    transition: left 0.2s ease-in-out;
-
-    &[data-size='small'] {
-      width: 2rem;
-    }
-
-    &[data-size='medium'] {
-      width: 2.5rem;
-    }
-
-    &[data-size='small'] svg {
-      width: 1rem;
-      height: 1rem;
-    }
-
-    &[data-size='medium'] svg {
-      width: 1.25rem;
-      height: 1.25rem;
-    }
-  }
-
-  .bui-SearchFieldInput {
+  .bui-SearchFieldInputWrapper {
     display: flex;
     align-items: center;
-    padding: 0 var(--bui-space-3);
     border-radius: var(--bui-radius-2);
     border: 1px solid var(--bui-border);
     background-color: var(--bui-bg-surface-1);
-    font-size: var(--bui-font-size-3);
-    font-family: var(--bui-font-regular);
-    font-weight: var(--bui-font-weight-regular);
-    color: var(--bui-fg-primary);
-    transition: padding 0.3s ease-in-out, border-color 0.2s ease-in-out,
-      outline-color 0.2s ease-in-out;
-    width: 100%;
-    height: 100%;
-    cursor: inherit;
+    transition: border-color 0.2s ease-in-out, outline-color 0.2s ease-in-out;
 
-    &::-webkit-search-cancel-button,
-    &::-webkit-search-decoration {
-      -webkit-appearance: none;
+    &[data-size='small'] {
+      height: 2rem;
     }
 
-    &::placeholder {
-      color: var(--bui-fg-secondary);
+    &[data-size='medium'] {
+      height: 2.5rem;
     }
 
-    &[data-focused] {
-      outline-color: var(--bui-border-pressed);
-      outline-width: 0px;
-    }
-
-    &[data-hovered] {
-      border-color: var(--bui-border-hover);
-    }
-
-    &[data-focused] {
+    &:focus-within {
       border-color: var(--bui-border-pressed);
       outline-width: 0px;
+    }
+
+    &:hover {
+      border-color: var(--bui-border-hover);
     }
 
     &[data-invalid] {
@@ -181,14 +118,75 @@
     }
   }
 
-  .bui-SearchFieldClear {
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
+  .bui-SearchFieldInputIcon {
+    flex: 0 0 auto;
+    display: grid;
+    place-content: center;
+    color: var(--bui-fg-primary);
+    pointer-events: none;
+    width: var(--search-field-item-height);
+    height: var(--search-field-item-height);
+    /* To animate the icon when the input is collapsed */
+    transition: opacity 0.2s ease-in-out;
+
+    & svg {
+      .bui-SearchField[data-size='small'] & {
+        width: 1rem;
+        height: 1rem;
+      }
+
+      .bui-SearchField[data-size='medium'] & {
+        width: 1.25rem;
+        height: 1.25rem;
+      }
+    }
+  }
+
+  .bui-SearchFieldInput {
+    flex: 1;
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    font-size: var(--bui-font-size-3);
+    font-family: var(--bui-font-regular);
+    font-weight: var(--bui-font-weight-regular);
+    color: var(--bui-fg-primary);
+    transition: padding 0.3s ease-in-out;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    cursor: inherit;
+
+    &::-webkit-search-cancel-button,
+    &::-webkit-search-decoration {
+      -webkit-appearance: none;
+    }
+
+    &::placeholder {
+      color: var(--bui-fg-secondary);
+    }
+
+    &[data-disabled] {
+      cursor: not-allowed;
+    }
+
+    &:first-child {
+      .bui-SearchField[data-size='small'] & {
+        padding-inline: var(--bui-space-3) 0;
+      }
+
+      .bui-SearchField[data-size='medium'] & {
+        padding-inline: var(--bui-space-3) 0;
+      }
+    }
+  }
+
+  .bui-SearchFieldClear {
+    flex: 0 0 auto;
+    display: grid;
+    place-content: center;
     background-color: transparent;
     border: none;
     padding: 0;
@@ -196,19 +194,11 @@
     cursor: pointer;
     color: var(--bui-fg-secondary);
     transition: color 0.2s ease-in-out;
+    width: var(--search-field-item-height);
+    height: var(--search-field-item-height);
 
     &:hover {
       color: var(--bui-fg-primary);
-    }
-
-    &[data-size='small'] {
-      width: 2rem;
-      height: 2rem;
-    }
-
-    &[data-size='medium'] {
-      width: 2.5rem;
-      height: 2.5rem;
     }
 
     & svg {
