--- a/packages/ui/src/components/Grid/Grid.module.css
+++ b/packages/ui/src/components/Grid/Grid.module.css
@@ -20,4 +20,19 @@
   .bui-Grid {
     display: grid;
   }
+
+  .bui-Grid[data-bg='surface-0'],
+  .bui-GridItem[data-bg='surface-0'] {
+    background-color: var(--bui-bg-surface-0);
+  }
+
+  .bui-Grid[data-bg='surface-1'],
+  .bui-GridItem[data-bg='surface-1'] {
+    background-color: var(--bui-bg-surface-1);
+  }
+
+  .bui-Grid[data-bg='surface-2'],
+  .bui-GridItem[data-bg='surface-2'] {
+    background-color: var(--bui-bg-surface-2);
+  }
 }
