--- a/packages/ui/src/components/Button/Button.module.css
+++ b/packages/ui/src/components/Button/Button.module.css
@@ -18,21 +18,26 @@
 
 @layer components {
   .bui-Button {
-    border: none;
+    --loading-duration: 200ms;
+    position: relative;
     display: inline-flex;
-    align-items: center;
-    justify-content: center;
+    border: none;
     user-select: none;
     font-family: var(--bui-font-regular);
     font-weight: var(--bui-font-weight-bold);
     padding: 0;
     cursor: pointer;
     border-radius: var(--bui-radius-2);
-    gap: var(--bui-space-1_5);
     flex-shrink: 0;
+    transition: background-color var(--loading-duration) ease-out,
+      box-shadow var(--loading-duration) ease-out;
 
     &[data-disabled='true'] {
       cursor: not-allowed;
+    }
+
+    &[data-loading='true'] {
+      cursor: wait;
     }
   }
 
@@ -54,7 +59,8 @@
       outline-offset: 2px;
     }
 
-    &[data-disabled='true'] {
+    &[data-disabled='true'],
+    &[data-loading='true'] {
       background-color: var(--bui-bg-solid-disabled);
       color: var(--bui-fg-solid-disabled);
     }
@@ -80,7 +86,8 @@
       box-shadow: inset 0 0 0 2px var(--bui-ring);
     }
 
-    &[data-disabled='true'] {
+    &[data-disabled='true'],
+    &[data-loading='true'] {
       box-shadow: inset 0 0 0 1px var(--bui-border-disabled);
       color: var(--bui-fg-disabled);
     }
@@ -105,9 +112,21 @@
       box-shadow: inset 0 0 0 2px var(--bui-ring);
     }
 
-    &[data-disabled='true'] {
+    &[data-disabled='true'],
+    &[data-loading='true'] {
       background-color: transparent;
       color: var(--bui-fg-disabled);
+    }
+  }
+
+  .bui-Button[data-size='small'] {
+    font-size: var(--bui-font-size-3);
+    padding: 0 var(--bui-space-2);
+    height: 2rem;
+
+    svg {
+      width: 1rem;
+      height: 1rem;
     }
   }
 
@@ -115,21 +134,70 @@
     font-size: var(--bui-font-size-4);
     padding: 0 var(--bui-space-3);
     height: 2.5rem;
+
+    svg {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
   }
 
-  .bui-Button[data-size='small'] {
-    font-size: var(--bui-font-size-3);
-    padding: 0 var(--bui-space-2);
-    height: 2rem;
+  .bui-ButtonContent {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: var(--bui-space-1_5);
+    height: 100%;
+    width: 100%;
+    transition: opacity var(--loading-duration) ease-out;
+
+    .bui-Button[data-loading='true'] & {
+      opacity: 0;
+    }
   }
 
-  .bui-Button[data-size='small'] svg {
-    width: 1rem;
-    height: 1rem;
+  .bui-ButtonSpinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    opacity: 0;
+    transition: opacity var(--loading-duration) ease-in;
+
+    .bui-Button[data-loading='true'] & {
+      opacity: 1;
+    }
+
+    & svg {
+      animation: bui-spin 1s linear infinite;
+    }
   }
 
-  .bui-Button[data-size='medium'] svg {
-    width: 1.25rem;
-    height: 1.25rem;
+  @media (prefers-reduced-motion: reduce) {
+    .bui-Button {
+      transition-duration: 50ms;
+    }
+
+    .bui-ButtonContent {
+      transition-duration: 50ms;
+    }
+
+    .bui-ButtonSpinner {
+      transition-duration: 50ms;
+    }
+
+    .bui-ButtonSpinner svg {
+      animation: none;
+    }
+  }
+
+  @keyframes bui-spin {
+    from {
+      transform: rotate(0deg);
+    }
+
+    to {
+      transform: rotate(360deg);
+    }
   }
 }
