--- a/.storybook/themes/spotify.css
+++ b/.storybook/themes/spotify.css
@@ -224,11 +224,23 @@
   --bui-bg-solid-pressed: #1abc54;
   --bui-bg-solid-disabled: var(--bui-gray-2);
 
+  --bui-bg-hover-on-surface-0: var(--bui-white);
+  --bui-bg-pressed-on-surface-0: var(--bui-gray-2);
+  --bui-bg-disabled-on-surface-0: var(--bui-gray-1);
+
+  --bui-bg-hover-on-surface-1: var(--bui-gray-1);
+  --bui-bg-pressed-on-surface-1: var(--bui-gray-2);
+  --bui-bg-disabled-on-surface-1: var(--bui-gray-1);
+
+  --bui-bg-hover-on-surface-2: var(--bui-white);
+  --bui-bg-pressed-on-surface-2: var(--bui-gray-2);
+  --bui-bg-disabled-on-surface-2: var(--bui-gray-1);
+
   --bui-fg-primary: var(--bui-black);
   --bui-fg-secondary: var(--bui-gray-7);
   --bui-fg-solid: var(--bui-black);
 
-  --bui-border: var(--bui-gray-3);
+  --bui-border: rgba(0, 0, 0, 0.2);
   --bui-border-hover: rgba(0, 0, 0, 0.3);
   --bui-border-pressed: rgba(0, 0, 0, 0.5);
   --bui-border-disabled: rgba(0, 0, 0, 0.1);
@@ -255,10 +267,19 @@
   --bui-bg-solid-hover: #3be477;
   --bui-bg-solid-pressed: #1abc54;
   --bui-bg-solid-disabled: #0f6c30;
-  --bui-bg-tint: #242424;
-  --bui-bg-tint-hover: #202020;
-  --bui-bg-tint-pressed: #292929;
-  --bui-bg-tint-disabled: rgba(255, 255, 255, 0.8);
+
+  --bui-bg-hover-on-surface-0: var(--bui-gray-1);
+  --bui-bg-pressed-on-surface-0: var(--bui-gray-2);
+  --bui-bg-disabled-on-surface-0: var(--bui-gray-1);
+
+  --bui-bg-hover-on-surface-1: var(--bui-gray-2);
+  --bui-bg-pressed-on-surface-1: var(--bui-gray-3);
+  --bui-bg-disabled-on-surface-1: var(--bui-gray-2);
+
+  --bui-bg-hover-on-surface-2: var(--bui-gray-3);
+  --bui-bg-pressed-on-surface-2: var(--bui-gray-4);
+  --bui-bg-disabled-on-surface-2: var(--bui-gray-3);
+
   --bui-bg-danger: #3b1219;
   --bui-bg-warning: #302008;
   --bui-bg-success: #132d21;
@@ -276,7 +297,7 @@
   --bui-fg-warning: #e36d05;
   --bui-fg-success: #1db954;
 
-  --bui-border: var(--bui-gray-3);
+  --bui-border: rgba(255, 255, 255, 0.3);
   --bui-border-hover: rgba(255, 255, 255, 0.4);
   --bui-border-pressed: rgba(255, 255, 255, 0.5);
   --bui-border-disabled: rgba(255, 255, 255, 0.2);
