--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -54,17 +54,25 @@
     --bui-bg-surface-0: var(--bui-gray-1);
     --bui-bg-surface-1: var(--bui-white);
     --bui-bg-surface-2: var(--bui-gray-2);
+    --bui-bg-danger: #feebe7;
+    --bui-bg-warning: #fff2b2;
+    --bui-bg-success: #e6f6eb;
     --bui-bg-solid: #1f5493;
     --bui-bg-solid-hover: #163a66;
     --bui-bg-solid-pressed: #0f2b4e;
     --bui-bg-solid-disabled: #ebebeb;
-    --bui-bg-tint: transparent;
-    --bui-bg-tint-hover: #1f549366;
-    --bui-bg-tint-pressed: #1f549399;
-    --bui-bg-tint-disabled: #ebebeb;
-    --bui-bg-danger: #feebe7;
-    --bui-bg-warning: #fff2b2;
-    --bui-bg-success: #e6f6eb;
+    --bui-bg-on-surface-0: var(--bui-bg-surface-0);
+    --bui-bg-hover-on-surface-0: color-mix(in srgb, var(--bui-bg-solid) 4%, transparent);
+    --bui-bg-pressed-on-surface-0: color-mix(in srgb, var(--bui-bg-solid) 6%, transparent);
+    --bui-bg-disabled-on-surface-0: var(--bui-bg-surface-0);
+    --bui-bg-on-surface-1: var(--bui-bg-surface-1);
+    --bui-bg-hover-on-surface-1: color-mix(in srgb, var(--bui-bg-solid) 4%, transparent);
+    --bui-bg-pressed-on-surface-1: color-mix(in srgb, var(--bui-bg-solid) 6%, transparent);
+    --bui-bg-disabled-on-surface-1: var(--bui-bg-surface-1);
+    --bui-bg-on-surface-2: var(--bui-bg-surface-2);
+    --bui-bg-hover-on-surface-2: color-mix(in srgb, var(--bui-bg-solid) 4%, transparent);
+    --bui-bg-pressed-on-surface-2: color-mix(in srgb, var(--bui-bg-solid) 6%, transparent);
+    --bui-bg-disabled-on-surface-2: var(--bui-bg-surface-2);
     --bui-fg-primary: var(--bui-black);
     --bui-fg-secondary: var(--bui-gray-7);
     --bui-fg-link: #1f5493;
@@ -102,17 +110,25 @@
     --bui-bg-surface-0: #333;
     --bui-bg-surface-1: #424242;
     --bui-bg-surface-2: var(--bui-gray-2);
+    --bui-bg-danger: #3b1219;
+    --bui-bg-warning: #302008;
+    --bui-bg-success: #132d21;
     --bui-bg-solid: #9cc9ff;
     --bui-bg-solid-hover: #83b9fd;
     --bui-bg-solid-pressed: #83b9fd;
     --bui-bg-solid-disabled: #222;
-    --bui-bg-tint: transparent;
-    --bui-bg-tint-hover: #9cc9ff1f;
-    --bui-bg-tint-pressed: #9cc9ff29;
-    --bui-bg-tint-disabled: transparent;
-    --bui-bg-danger: #3b1219;
-    --bui-bg-warning: #302008;
-    --bui-bg-success: #132d21;
+    --bui-bg-on-surface-0: var(--bui-bg-surface-0);
+    --bui-bg-hover-on-surface-0: color-mix(in srgb, var(--bui-bg-solid) 12%, transparent);
+    --bui-bg-pressed-on-surface-0: color-mix(in srgb, var(--bui-bg-solid) 16%, transparent);
+    --bui-bg-disabled-on-surface-0: var(--bui-bg-surface-0);
+    --bui-bg-on-surface-1: var(--bui-bg-surface-1);
+    --bui-bg-hover-on-surface-1: color-mix(in srgb, var(--bui-bg-solid) 4%, transparent);
+    --bui-bg-pressed-on-surface-1: color-mix(in srgb, var(--bui-bg-solid) 6%, transparent);
+    --bui-bg-disabled-on-surface-1: var(--bui-bg-surface-1);
+    --bui-bg-on-surface-2: var(--bui-bg-surface-2);
+    --bui-bg-hover-on-surface-2: color-mix(in srgb, var(--bui-bg-solid) 4%, transparent);
+    --bui-bg-pressed-on-surface-2: color-mix(in srgb, var(--bui-bg-solid) 6%, transparent);
+    --bui-bg-disabled-on-surface-2: var(--bui-bg-surface-2);
     --bui-fg-primary: var(--bui-white);
     --bui-fg-secondary: var(--bui-gray-7);
     --bui-fg-link: #9cc9ff;
@@ -125,7 +141,7 @@
     --bui-fg-danger: #e22b2b;
     --bui-fg-warning: #e36d05;
     --bui-fg-success: #1db954;
-    --bui-border: #ffffff1f;
+    --bui-border: #fff3;
     --bui-border-hover: #fff6;
     --bui-border-pressed: #ffffff80;
     --bui-border-disabled: #fff3;
