--- a/packages/ui/src/components/Button/Button.module.css
+++ b/packages/ui/src/components/Button/Button.module.css
@@ -40,7 +40,7 @@
     background-color: var(--bui-bg-solid);
     color: var(--bui-fg-solid);
 
-    &:hover {
+    &[data-hovered='true'] {
       background-color: var(--bui-bg-solid-hover);
       transition: background-color 150ms ease;
     }
@@ -61,13 +61,13 @@
   }
 
   .bui-Button[data-variant='secondary'] {
-    background-color: var(--bui-bg-surface-1);
     box-shadow: inset 0 0 0 1px var(--bui-border);
     color: var(--bui-fg-primary);
 
-    &:hover {
+    &[data-hovered='true'] {
       box-shadow: inset 0 0 0 1px var(--bui-border-hover);
-      transition: box-shadow 150ms ease;
+      transition: box-shadow 150ms ease-in-out,
+        background-color 150ms ease-in-out;
     }
 
     &:active {
@@ -87,16 +87,10 @@
   }
 
   .bui-Button[data-variant='tertiary'] {
-    background-color: transparent;
     color: var(--bui-fg-primary);
 
-    &:hover {
-      background-color: var(--bui-bg-surface-1);
-      transition: background-color 200ms ease;
-    }
-
-    &:active {
-      background-color: var(--bui-bg-surface-2);
+    &[data-hovered='true'] {
+      transition: background-color 150ms ease;
     }
 
     &:focus-visible {
@@ -106,7 +100,6 @@
     }
 
     &[data-disabled='true'] {
-      background-color: transparent;
       color: var(--bui-fg-disabled);
     }
   }
@@ -131,5 +124,56 @@
   .bui-Button[data-size='medium'] svg {
     width: 1.25rem;
     height: 1.25rem;
+  }
+}
+
+.bui-Button[data-variant='secondary'],
+.bui-Button[data-variant='tertiary'] {
+  &[data-on='surface-0'] {
+    background-color: var(--bui-bg-on-surface-0);
+
+    &[data-hovered='true'] {
+      background-color: var(--bui-bg-hover-on-surface-0);
+    }
+
+    &:active {
+      background-color: var(--bui-bg-pressed-on-surface-0);
+    }
+
+    &[data-disabled='true'] {
+      background-color: var(--bui-bg-disabled-on-surface-0);
+    }
+  }
+
+  &[data-on='surface-1'] {
+    background-color: var(--bui-bg-on-surface-1);
+
+    &[data-hovered='true'] {
+      background-color: var(--bui-bg-hover-on-surface-1);
+    }
+
+    &:active {
+      background-color: var(--bui-bg-pressed-on-surface-1);
+    }
+
+    &[data-disabled='true'] {
+      background-color: var(--bui-bg-disabled-on-surface-1);
+    }
+  }
+
+  &[data-on='surface-2'] {
+    background-color: var(--bui-bg-on-surface-2);
+
+    &[data-hovered='true'] {
+      background-color: var(--bui-bg-hover-on-surface-2);
+    }
+
+    &:active {
+      background-color: var(--bui-bg-pressed-on-surface-2);
+    }
+
+    &[data-disabled='true'] {
+      background-color: var(--bui-bg-disabled-on-surface-2);
+    }
   }
 }
