--- a/packages/ui/src/components/Flex/Flex.module.css
+++ b/packages/ui/src/components/Flex/Flex.module.css
@@ -24,15 +24,27 @@
     min-width: 0;
   }
 
-  .bui-Flex[data-bg='surface-0'] {
+  .bui-Flex[data-surface='0'] {
     background-color: var(--bui-bg-surface-0);
   }
 
-  .bui-Flex[data-bg='surface-1'] {
+  .bui-Flex[data-surface='1'] {
     background-color: var(--bui-bg-surface-1);
   }
 
-  .bui-Flex[data-bg='surface-2'] {
+  .bui-Flex[data-surface='2'] {
     background-color: var(--bui-bg-surface-2);
+  }
+
+  .bui-Flex[data-surface='danger'] {
+    background-color: var(--bui-bg-danger);
+  }
+
+  .bui-Flex[data-surface='warning'] {
+    background-color: var(--bui-bg-warning);
+  }
+
+  .bui-Flex[data-surface='success'] {
+    background-color: var(--bui-bg-success);
   }
 }
