--- a/packages/ui/src/css/tokens.css
+++ b/packages/ui/src/css/tokens.css
@@ -92,7 +92,7 @@
     --bui-bg-solid: #1f5493;
     --bui-bg-solid-hover: #163a66;
     --bui-bg-solid-pressed: #0f2b4e;
-    --bui-bg-solid-disabled: #ebebeb;
+    --bui-bg-solid-disabled: #0f2b4e;
 
     --bui-bg-on-surface-0: var(--bui-bg-surface-0);
     --bui-bg-hover-on-surface-0: color-mix(
@@ -188,7 +188,7 @@
     --bui-bg-solid: #9cc9ff;
     --bui-bg-solid-hover: #83b9fd;
     --bui-bg-solid-pressed: #83b9fd;
-    --bui-bg-solid-disabled: #222222;
+    --bui-bg-solid-disabled: #153155;
 
     --bui-bg-on-surface-0: var(--bui-bg-surface-0);
     --bui-bg-hover-on-surface-0: color-mix(
