--- a/packages/ui/src/components/Box/Box.module.css
+++ b/packages/ui/src/components/Box/Box.module.css
@@ -23,15 +23,27 @@
     color: var(--bui-fg-primary);
   }
 
-  .bui-Box[data-bg='surface-0'] {
+  .bui-Box[data-surface='0'] {
     background-color: var(--bui-bg-surface-0);
   }
 
-  .bui-Box[data-bg='surface-1'] {
+  .bui-Box[data-surface='1'] {
     background-color: var(--bui-bg-surface-1);
   }
 
-  .bui-Box[data-bg='surface-2'] {
+  .bui-Box[data-surface='2'] {
     background-color: var(--bui-bg-surface-2);
+  }
+
+  .bui-Box[data-surface='danger'] {
+    background-color: var(--bui-bg-danger);
+  }
+
+  .bui-Box[data-surface='warning'] {
+    background-color: var(--bui-bg-warning);
+  }
+
+  .bui-Box[data-surface='success'] {
+    background-color: var(--bui-bg-success);
   }
 }
