--- a/packages/ui/src/components/Grid/Grid.module.css
+++ b/packages/ui/src/components/Grid/Grid.module.css
@@ -21,18 +21,33 @@
     display: grid;
   }
 
-  .bui-Grid[data-bg='surface-0'],
-  .bui-GridItem[data-bg='surface-0'] {
+  .bui-Grid[data-surface='0'],
+  .bui-GridItem[data-surface='0'] {
     background-color: var(--bui-bg-surface-0);
   }
 
-  .bui-Grid[data-bg='surface-1'],
-  .bui-GridItem[data-bg='surface-1'] {
+  .bui-Grid[data-surface='1'],
+  .bui-GridItem[data-surface='1'] {
     background-color: var(--bui-bg-surface-1);
   }
 
-  .bui-Grid[data-bg='surface-2'],
-  .bui-GridItem[data-bg='surface-2'] {
+  .bui-Grid[data-surface='2'],
+  .bui-GridItem[data-surface='2'] {
     background-color: var(--bui-bg-surface-2);
+  }
+
+  .bui-Grid[data-surface='danger'],
+  .bui-GridItem[data-surface='danger'] {
+    background-color: var(--bui-bg-danger);
+  }
+
+  .bui-Grid[data-surface='warning'],
+  .bui-GridItem[data-surface='warning'] {
+    background-color: var(--bui-bg-warning);
+  }
+
+  .bui-Grid[data-surface='success'],
+  .bui-GridItem[data-surface='success'] {
+    background-color: var(--bui-bg-success);
   }
 }
