fix: add react-router-dom to peer deps
Signed-off-by: ElaineDeMattosSilvaB <elaine.de-mattos-silva-bezerra@deutschebahn.com>

--- a/packages/cli/templates/frontend-plugin/package.json.hbs
+++ b/packages/cli/templates/frontend-plugin/package.json.hbs
@@ -32,7 +32,8 @@
   },
   "peerDependencies": {
     "react": "{{versionQuery 'react' '^16.13.1 || ^17.0.0 || ^18.0.0'}}",
-    "react-dom": "{{versionQuery 'react-dom' '^16.13.1 || ^17.0.0 || ^18.0.0'}}"
+    "react-dom": "{{versionQuery 'react-dom' '^16.13.1 || ^17.0.0 || ^18.0.0'}}",
+    "react-router-dom": "{{versionQuery 'react-router-dom' '^6.0.0'}}"
   },
   "devDependencies": {
     "@backstage/cli": "{{versionQuery '@backstage/cli'}}",
