add overflow clip to dialog
Signed-off-by: Claire Peng <clairep@spotify.com>

--- a/packages/ui/src/components/Dialog/Dialog.module.css
+++ b/packages/ui/src/components/Dialog/Dialog.module.css
@@ -55,6 +55,7 @@
     display: flex;
     flex-direction: column;
     outline: none;
+    overflow: clip;
   }
 
   /* Dialog entering animation */
